[tool.poetry]
name = "lms-fastapi"
version = "0.1.0"
description = ""
authors = ["dimple <dimple.mathew@realxdata.com>"]
readme = "README.md"
packages = [{include = "lms_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
